posiGen_FullsendBox/src/objects/Milestone__c.object
<CustomObject>
    <description>records stop getting created as of 6/1/2015</description>
    <fields>
        <fullName>Actual_Complete_Date__c</fullName>
        <formula>IF(AND(Number_of_Tasks__c &gt; 1,  Number_of_Open_Tasks__c = 0), Max_Task_Complete_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <summarizedField>Task__c.Actual_Start_Date__c</summarizedField>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>NOT(ISNULL(Actual_Complete_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Task_Created_On_Date__c</fullName>
        <label>First Task Created On Date</label>
        <summarizedField>Task__c.CreatedDate</summarizedField>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Predecessor__c</fullName>
        <formula>NOT(ISBLANK(Predecessor_Milestone__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Predecessor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Task_Created_On_Date__c</fullName>
        <label>Last Task Created On Date</label>
        <summarizedField>Task__c.CreatedDate</summarizedField>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Task_Complete_Date__c</fullName>
        <label>Max Task Complete Date</label>
        <summarizedField>Task__c.Actual_Complete_Date__c</summarizedField>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Milestone_Number__c</fullName>
        <label>Milestone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Tasks__c</fullName>
        <description>All Tasks that aren&apos;t complete or cancelled</description>
        <label>Number of Open Tasks</label>
        <summaryFilterItems>
            <field>Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Okay_to_Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
        <label>Okay to Reparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>VALUE(Project__r.Opportunity__r.Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVI_Activation_Complete_Date__c</fullName>
        <label>PVI Activation Complete Date</label>
        <summarizedField>Task__c.Actual_Complete_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Task__c.Name</field>
            <operation>equals</operation>
            <value>Activate System</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PV_System_Installed_On__c</fullName>
        <description>This is based on the electrical Install Date.</description>
        <label>PV System Installed On</label>
        <summarizedField>Task__c.Actual_Complete_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Task__c.Name</field>
            <operation>equals</operation>
            <value>Install Electrical</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Complete__c</fullName>
        <formula>Predecessor_Milestone__r.Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Milestone Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Import_Id__c</fullName>
        <label>Predecessor_Milestone_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Number_Import_Sup__c</fullName>
        <label>Predecessor Milestone Number Import Sup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Number__c</fullName>
        <formula>Predecessor_Milestone__r.Milestone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Milestone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Successor Milestones</relationshipLabel>
        <relationshipName>Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Customer_Liaison__c</fullName>
        <formula>Project__r.Opportunity__r.Project_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Customer Liaison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Deadline__c</fullName>
        <formula>Project__r.Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Record_Type__c</fullName>
        <formula>Project__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Salesperson__c</fullName>
        <formula>Project__r.Opportunity__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Salesperson</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>TEXT(Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Template_Number__c</fullName>
        <formula>Project__r.Template_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Template Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <inlineHelpText>Why is the status now what it is?  (if non-obvious)</inlineHelpText>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontractor_User__c</fullName>
        <formula>Project__r.Subcontractor__r.Default_Assignee_User__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcontractor User</label>
        <type>Text</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Milestone_Number__c</columns>
        <columns>Number_of_Open_Tasks__c</columns>
        <columns>Number_of_Tasks__c</columns>
        <columns>Complete__c</columns>
        <columns>First_Task_Created_On_Date__c</columns>
        <columns>Last_Task_Created_On_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SF2_0_Milestones</fullName>
        <columns>Milestone_Number__c</columns>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Deadline__c</columns>
        <columns>Complete__c</columns>
        <columns>Number_of_Open_Tasks__c</columns>
        <columns>Number_of_Tasks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>SF 2</value>
        </filters>
        <label>SF2.0 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Template_Project_Milestones</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Milestone_Number__c</columns>
        <columns>NAME</columns>
        <columns>Predecessor_Milestone__c</columns>
        <columns>Number_of_Open_Tasks__c</columns>
        <columns>Number_of_Tasks__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>Template</value>
        </filters>
        <label>Template Project Milestones</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>